actualizacion de interfaz

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="contenedor">
       <h1>Teclado virtual</h1>
-      <div class="teclasPr"><h3>123456789abcd</h3></div>
+      <div class="teclasPr" id="teclasPr"><h2> </h2></div>
       <br />
 
       <button id="btnNum1">1</button>
@@ -26,6 +26,7 @@
       <button id="btnNum8">8</button>
       <button id="btnNum9">9</button>
       <button id="btnNum0">0</button>
+	  <button class="btnBorrar" id="btnBorrar"><--</button>
 	  <br />
 
 	  <button id="btnQ">q</button>
@@ -50,6 +51,7 @@
       <button id="btnK">k</button>
       <button id="btnL">l</button>
       <button id="btnÑ">ñ</button>
+	  <button id="btnEnter">¬</button>
 	  <br />
 
 	  <button id="btnZ">z</button>
@@ -59,9 +61,12 @@
       <button id="btnB">b</button>
       <button id="btnN">n</button>
       <button id="btnM">m</button>
+	  <button id="btnComa">,</button>
+	  <button id="btnPunto">.</button>
+	  <button id="btnGuion">-</button>
       <br />
 
-	  <button class="botonEspacio" id="btnNum7">espacio</button>
+	  <button class="btnEspacio" id="btnEspacio">espacio</button>
 	  
     </div>
 	<script src="./assets/js/scripts.js"></script>
